podList with image and stats

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Welcome to Vue</title>
+        <title>Pi IR Viewer</title>
     </head>
     <body>
         <div id="app">
             <h1>
-                {{message}}
             </h1>
         </div>
 
